--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,3 +1,12 @@
-<ion-content padding>
-
+<ion-content class="content" padding>
+  <div class="content__back-layer"></div>
+  <div class="content__main flex-main">
+    <div class="flex-main__header">こうらくえんのなにか</div>
+    <div class="flex-main__info info-panel">
+      <div class="info-panel__title">運行状況</div>
+      <div class="marquee"><p class="info-panel__text">ほほう</p></div>
+    </div>
+    <div class="flex-main__buttons"></div>
+    <div class="flex-main__footer"></div>
+  </div>
 </ion-content>
